--- a/minggu 6/index.html
+++ b/minggu 6/index.html
@@ -7,7 +7,7 @@
 </head>
 <body style="background-color:whitesmoke;">
  <nav  style="background-color: rgb(163, 221, 255);" >
- <center><a href="pertemuan 6.html"><img src="https://img.icons8.com/material-rounded/24/000000/home.png"/></a> 
+ <center><a href="index html.html"><img src="https://img.icons8.com/material-rounded/24/000000/home.png"/></a> 
  <a href="cv-name.pdf"><img src="https://img.icons8.com/material-outlined/21/000000/parse-from-clipboard.png"/></a> 
  <a href="kontak.html"><img src="https://img.icons8.com/metro/19/000000/phone.png"></a> 
  <a href="Tentang.html"><img src="https://img.icons8.com/material-rounded/22/000000/about.png"/></a>
