--- a/Minggu 12/objek-1.html
+++ b/Minggu 12/objek-1.html
@@ -7,8 +7,8 @@
  <title>Belajar Objek Javascript</title>
  <script>
  var person = {
- firstName: "Rudi",
- lastName: "Tabuti",
+ firstName: "Hikari",
+ lastName: "Yafi",
  showName: function(){
  alert(`Nama: ${this.firstName} ${this.lastName}`);
  }
